# Bookflix

./: .env.example  .gitignore  CLAUDE.md  Makefile  TASKS.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: router.py  ws.py
backend/app/api/v1/: books.py  chat.py  config.py  feed.py  insights.py  knowledge.py  library.py  reading.py  recommendations.py  search.py  topics.py
backend/app/db/: engine.py  session.py
backend/app/llm/: client.py  models.py  prompts.py
backend/app/models/: __init__.py  book.py  category.py  chat.py  chunk.py  enrichment.py  feed.py  insight.py  knowledge.py  processing.py  reading.py  topic.py
backend/app/processing/: chunker.py  embedder.py  metadata_parser.py  pipeline.py
backend/app/processing/extractors/: epub_extractor.py  pdf_extractor.py
backend/app/schemas/: book.py  chat.py  common.py  feed.py  insight.py  processing.py  reading.py  search.py  topic.py
backend/app/services/: book_service.py  chat_service.py  embedding_service.py  enrichment_service.py  feed_service.py  insight_service.py  knowledge_service.py  library_service.py  orchestrator_service.py  reading_service.py  recommendation_service.py  search_service.py  topic_service.py
backend/app/utils/: file_utils.py  image_utils.py  text_utils.py  ws_manager.py
backend/celery_app/: celery.py  schedules.py
backend/celery_app/tasks/: book_tasks.py  embedding_tasks.py  enrichment_tasks.py  feed_tasks.py  insight_tasks.py  orchestrator_tasks.py  topic_tasks.py
(+57 files in other folders)
